# nkpc_estimation

./: .pre-commit-config.yaml  CHANGES.md  CITATION  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: main.yml
paper/: nkpc_estimation.tex  nkpc_estimation_pres.tex  refs.bib  task_paper.py
src/nkpc_estimation/: __init__.py  config.py
src/nkpc_estimation/analysis/: config.py  model.py  sensitivity.py  task_analysis.py
src/nkpc_estimation/data/: DP_LIVE_29012023114147131.csv  DP_LIVE_29012023134946209.csv  GDP.csv  PRS85006173.csv  sca-table32-on-2023-Feb-12.csv
src/nkpc_estimation/data_management/: __init__.py  clean_data.py  data_info.yaml  task_data_management.py
src/nkpc_estimation/final/: __init__.py  config.py  plot.py  task_final.py
tests/analysis/: test_model.py  test_predict.py  test_sensitivity.py
tests/data_management/: test_clean_data.py
tests/data_management/sample_data/: data_fixture.csv  data_fixture.txt  data_fixture.xlsx  data_info_fixture.yaml
