[metadata]
name = nkpc_estimation
description = The New Keynesian Phillips Curve: An Empirical Assessment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SvenEis/nkpc_estimation
author = Sven Eis
author_email = s6sveiss@uni-bonn.de
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/SvenEis/nkpc_estimation
    Documentation = https://github.com/SvenEis/nkpc_estimation
    Github = https://github.com/SvenEis/nkpc_estimation
    Tracker = https://github.com/SvenEis/nkpc_estimation/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/nkpc_estimation/_version.py
